@@ -55,6 +55,9 @@ o use global variables directory /etc/indimail/control/global_vars for
     global_vars
 31. qmail-send.c, qmail-todo.c, slowq-send.c qmta-send.c: log when log sighup,
     sigalrm is caught
+- 27/07/2021
+32. svctool: create init script for inlookup service to allow indimail to
+    control inlookup service
 
 * 
 Release 2.13 Start 14/02/2021
